fix: ajuste css z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,6 @@ body {
 
 .triangulo {
   position: relative;
-  z-index: 0;
 }
 
 .triangulo::after {
